syntax = "proto3";

option go_package = "./;pdclpb";

import "google/protobuf/timestamp.proto";

// SignedMessage can be used to
message SignedMessage {

}

message Commit {
  google.protobuf.Timestamp created = 1;
  string previous_commit_cid = 2;
  repeated string messages_cids = 3;
}
